# AITradingAdvisory

./: .env.example  .gitignore  AZURE_SETUP.md  Dockerfile  Makefile  README.md  demo.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.sh  setup_ollama.sh  start.sh  test_agent_simple.py  test_bitget_integration.py  test_chart_fix.py  test_fullstack.py  test_import.py  test_interactive.py  test_live_agent.py  test_platform.py  test_ws_simple.py  verify_platform.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
azure/: deploy.sh
azure/bicep/: main.bicep
backend/: Dockerfile  requirements.txt  test_websocket.py
backend/app/: main.py
config/: .env.example
data/: .key  .secrets.enc
data/indicators/: indicator_registry.json  (+1 more)
examples/: crypto_analysis.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/: cache.py  candle_patterns.py  chart_assets.py  config.py  crypto_architecture.py  crypto_charts.py  crypto_tools.py  exchange_tools.py  indicator_registry.py  intent_router.py  keylevel_analyzer.py  main.py  ollama_client.py  report_tools.py  smart_alerts.py  tool_registry.py  tradingview_tools.py  tradingview_udf_server.py
tests/: conftest.py  test_candle_patterns.py  test_crypto_tools.py  test_exchange_tools.py  test_intent_router.py  test_keylevel_analyzer.py  test_learning_system.py  test_learning_system_live.py  test_market_phase_detector.py  test_stock_tools.py  test_tool_registry.py
(+108 files in other folders)
